--- a/react/src/components/ui/Avatar.css
+++ b/react/src/components/ui/Avatar.css
@@ -1,10 +1,11 @@
 .avatar {
-  border-radius: 50%;
-  overflow: hidden;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  background-color: #e7edf3;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #e5e5e5;
+  color: #666;
 }
 
 .avatar-img {
@@ -14,29 +15,28 @@
 }
 
 .avatar-placeholder {
-  color: #5181b8;
-  font-weight: bold;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-weight: bold;
 }
 
 .avatar-small {
-  width: 40px;
-  height: 40px;
-  font-size: 16px;
+  width: 32px;
+  height: 32px;
+  font-size: 14px;
 }
 
 .avatar-medium {
-  width: 64px;
-  height: 64px;
-  font-size: 24px;
+  width: 48px;
+  height: 48px;
+  font-size: 18px;
 }
 
 .avatar-large {
-  width: 120px;
-  height: 120px;
-  font-size: 48px;
+  width: 64px;
+  height: 64px;
+  font-size: 24px;
 }
